# solana-native-dev

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
account-data/: README.md  jest.config.js  package.json
account-data/program/: Cargo.toml
account-data/program/src/: lib.rs  processor.rs
account-data/program/src/instructions/: create.rs
account-data/program/src/state/: address_info.rs
account-data/program/tests/: tests.rs
account-data/tests/: index.test.ts
account-data/tests/fixtures/: account_data-keypair.json  hello_solana-keypair.json
accounts-that-expand-in-size/: package.json
accounts-that-expand-in-size/program/: Cargo.toml
accounts-that-expand-in-size/program/src/: processor.rs
accounts-that-expand-in-size/program/src/instructions/: create.rs  mod.rs  reallocate.rs
accounts-that-expand-in-size/program/src/state/: address_info.rs  enhanced_address_info.rs  mod.rs  work_info.rs
accounts-that-expand-in-size/program/tests/: index.rs
checking-instruction-accounts/: package.json
checking-instruction-accounts/program/: Cargo.toml
checking-instruction-accounts/program/src/: lib.rs  processor.rs
checking-instruction-accounts/program/tests/: test.rs
checking-instruction-accounts/tests/: index.test.ts
checking-instruction-accounts/tests/fixtures/: checking_instruction_accounts-keypair.json
close-account/: package.json
close-account/program/: Cargo.toml
close-account/program/src/: instruction.rs  lib.rs  state.rs
close-account/program/tests/: index.rs
close-account/tests/: index.test.ts
close-account/tests/fixtures/: close_account-keypair.json
create-account/: package.json
create-account/program/: Cargo.toml
create-account/program/src/: lib.rs
create-account/program/tests/: index.rs
cross-program-invocations/: package.json
cross-program-invocations/programs/hand/: Cargo.toml
cross-program-invocations/programs/hand/src/: lib.rs
cross-program-invocations/programs/hand/tests/: index.rs
cross-program-invocations/programs/lever/: Cargo.toml
cross-program-invocations/programs/lever/src/: lib.rs
cross-program-invocations/programs/lever/tests/: index.rs
cross-program-invocations/tests/: index.test.ts
cross-program-invocations/tests/fixtures/: hand-keypair.json  lever-keypair.json
custom-instruction-data/: package.json  tsconfig.json
custom-instruction-data/program/: Cargo.toml
custom-instruction-data/program/src/: lib.rs  state.rs
custom-instruction-data/program/tests/: index.rs
custom-instruction-data/tests/fixtures/: custom_instruction_data-keypair.json
global-state-counter/: README.md  package.json
global-state-counter/program/: Cargo.toml
global-state-counter/program/src/: lib.rs  state.rs
global-state-counter/tests/: counter.test.ts
global-state-counter/tests/fixtures/: global_state_counter-keypair.json
global-state-counter/ts/: index.ts
global-state-counter/ts/accounts/: counter.ts
global-state-counter/ts/instructions/: createIncrementInstruction.ts
hello-solana/: README.md  package.json  pnpm-lock.yaml
hello-solana/program/: Cargo.toml
hello-solana/program/src/: lib.rs  tests.rs
hello-solana/tests/: index.test.ts
pda-rent-payer/: package.json
pda-rent-payer/program/: Cargo.toml
pda-rent-payer/program/src/: lib.rs  state.rs
pda-rent-payer/program/tests/: index.rs
program-derived-assets/: package.json
program-derived-assets/program/: Cargo.toml
program-derived-assets/program/src/: lib.rs  processor.rs
program-derived-assets/program/src/instructions/: create.rs  increment.rs  mod.rs
program-derived-assets/program/src/state/: mod.rs  page_visits.rs
program-derived-assets/program/tests/: index.rs
rent/: package.json
rent/program/: Cargo.toml
rent/program/src/: lib.rs  processor.rs  state.rs
rent/program/tests/: test.rs
repository-layout-program/: package.json
repository-layout-program/program/: Cargo.toml
repository-layout-program/program/src/: lib.rs  processor.rs
repository-layout-program/program/src/instructions/: eat_food.rs  get_on_ride.rs  play_game.rs
repository-layout-program/program/src/state/: food.rs  game.rs  ride.rs
repository-layout-program/program/tests/: test.rs
transfer-sol-program/: package.json
transfer-sol-program/program/: Cargo.toml
transfer-sol-program/program/src/: instruction.rs  lib.rs  processor.rs  state.rs
transfer-sol-program/program/tests/: test.rs
user-pda-accounts/: jest.config.js  package.json
user-pda-accounts/program/: Cargo.toml
user-pda-accounts/program/src/: lib.rs  processor.rs  state.rs
user-pda-accounts/program/src/instruction/: create_pda.rs  get_pda.rs
user-pda-accounts/tests/: index.test.ts
user-pda-accounts/tests/fixtures/: user_pda_accounts-keypair.json
