
[package]
name = "account-data"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.3.0"

[lib]
crate-type = ["cdylib", "lib"]


[features]
custom-heap = []
custom-panic = []
solana = []


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }


