
[package]
name = "account-data"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
solana-program = "3.0.0"
solana-system-interface = "2.0.0"


[dev-dependencies]
litesvm = "0.8.1"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-native-token = "3.0.0"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.1"


[lib]
crate-type = ["cdylib", "lib"]


[features]
custom-heap = []
custom-panic = []
solana = []


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }


