[package]
name = "accounts-that-expand-in-size"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.6.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-program = "3.0.0"
base64ct = "=1.6.0"

[dev-dependencies]
solana-pubkey = "3.0.0"
solana-keypair = "3.0.0"
solana-transaction = "3.0.0"
solana-instruction = "3.0.0"
litesvm = "0.8.2"

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
