[package]
name = "close-account"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "3.0.0"
base64ct = "=1.6.0"
borsh = "1.5.7"


[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-heap = []
custom-panic = []


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }