[package]
name = "create-account"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
base64ct = "=1.6.0"


[dev-dependencies]
litesvm = "0.8.2"
solana-sdk = "3.0.0"


[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-heap = []
custom-panic = []
