[package]
name = "pda-rent-payer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
borsh = "1.6.0"
base64ct = "=1.6.0"


[dev-dependencies]
litesvm = "0.8.2"
solana-transaction = "3.0.1"
solana-keypair = "3.0.1"
solana-signer = "3.0.0"
solana-signature = "3.1.0"
solana-pubkey = "3.0.0"



[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }