[package]
name = "user-pda-accounts"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
solana-program = "2.1.0"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }