[package]
name = "hand"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []

[dependencies]
borsh = "1.6.0"
borsh-derive = "1.6.0"
solana-program = "3.0.0"
base64ct = "=1.6.0"
lever = { path = "../lever", features = ["cpi"] }

[dev-dependencies]
litesvm = "0.8.2"
solana-sdk = "3.0.0"
solana-system-interface = "2.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }


